--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="https://chemicalveil.github.io/chemicalveil/gitTest.css">
+    <link rel="stylesheet" href="gitTest.css">
     <title>Test Webstite</title>
     <style>
       
